--- a/styles/styles.css
+++ b/styles/styles.css
@@ -153,6 +153,37 @@ body {
     background-color: rgb(84, 86, 214);
 }
 
+#notifications {
+		position: fixed;
+		width: 100%;
+		height: 37px;
+		bottom: 45px;
+		padding: 3px;
+		overflow: hidden;
+}
+
+#notifications div {
+	display: inline-block;
+}
+
+#notifications div::after, #bottom-bar div::after {
+	content: "  |  ";
+	display: inline-block;
+	white-space: pre;
+}
+
+#bottom-bar {
+		position: fixed;
+		width: 100%;
+		height: 27px;
+		padding: 3px;
+		bottom: 10px;
+}
+
+#bottom-bar div {
+	display: inline-block;
+}
+
 .column {
     width: 33.33%;
     float: left;
@@ -162,7 +193,7 @@ body {
 
 .row:after {
     content: "";
-    display: table;
+
     clear: both;
 }
 
