--- a/styles/catgirl.css
+++ b/styles/catgirl.css
@@ -1,5 +1,5 @@
 :root {
-    --accent1: rgb(18, 250, 95);
-    --accent2: rgb(0, 238, 255);
-    --bg-color: rgb(3, 0, 34);
+    --accent1: 18, 250, 95;
+    --accent2: 0, 238, 255;
+    --bg-color: 3, 0, 34;
   }
