--- a/styles/catsitter.css
+++ b/styles/catsitter.css
@@ -1,5 +1,5 @@
 :root {
-    --accent1: rgb(247, 76, 156);
-    --accent2: rgb(158, 81, 230);
-    --bg-color: rgb(34, 0, 16);
+    --accent1: 247, 76, 156;
+    --accent2: 158, 81, 230;
+    --bg-color: 34, 0, 16;
   }
