--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,6 +78,30 @@ body {
   transition: 500ms ease-in-out all;
 }
 
+#loading-screen {
+  background-color: white;
+  color: black;
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 30px;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+#loading-screen span {
+  position: fixed;
+  display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+#game-wrapper {
+  display: none;
+}
+
 .tab {
   padding: 15px 0 0 0;
   display: none;
